--- a/Fargemannen/View/AnalyseXY.xaml
+++ b/Fargemannen/View/AnalyseXY.xaml
@@ -9,7 +9,7 @@
              d:DesignHeight="700" d:DesignWidth="700">
     <Grid DataContext="{Binding Source={x:Static vm:AnalyseXYViewModel.Instance}}">
         <TabControl>
-            <TabItem Header="Velg Analyse Omeråde">
+            <TabItem Header="Analyse" Width="335">
                 <Grid Background="White" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="20"/>
@@ -50,19 +50,20 @@
 
                     <StackPanel Grid.Column="4" Grid.Row="4" Orientation="Vertical" Grid.ColumnSpan="3" >
                         <TextBlock Text="Minimums årsgrense:" FontSize="15" FontFamily="Artifakt Element Medium" Margin="0,0,0,10"/>
-                        <TextBox Text="{Binding MinYear, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="120" Margin="0,0,0,10" HorizontalAlignment="Left"/>
+                        <TextBox Text="{Binding MinYear, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="120" Margin="0,0,0,10" HorizontalAlignment="Left" />
                         <TextBlock Text="Rute størresle:" FontSize="15" FontFamily="Artifakt Element Medium" Margin="0,0,0,10"/>
                         <TextBox Text="{Binding RuteStørresle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="120" Margin="0,0,0,10" HorizontalAlignment="Left"/>
                         <TextBlock Text="Navn på Bergmodell-lag:" FontSize="15" FontFamily="Artifakt Element Medium" Margin="0,50,0,10"/>
 
-                        <TextBox Text="{Binding BergmodellLagNavn, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="120" Margin="0,0,0,10"/>
+                        <TextBox Text="{Binding BergmodellLagNavn, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="120" Margin="0,0,0,10" HorizontalAlignment="Left"/>
                     </StackPanel>
-                    <RadioButton Content="Fargekart" GroupName="AnalyseType" IsChecked="{Binding IsFargekartSelected, Mode=TwoWay}" Grid.Column="1" Grid.Row="7" Margin="0,20,0,0" />
-                    <RadioButton Content="Mesh duk" GroupName="AnalyseType" IsChecked="{Binding IsMeshDukSelected, Mode=TwoWay}" Grid.Column="1" Grid.Row="8" />
-                    <Button Grid.Column="1" Grid.Row="9" Content="Velg Analyseområde" Command="{Binding VelgAnalyseXYCommand}" Height="50" Margin="0,20,0,0"/>
+                    <TextBlock Text="Type visualisering" FontSize="15" FontFamily="Artifakt Element Medium" Margin="0,0,0,6" Grid.Column="1" Grid.Row="7"/>
+                    <RadioButton Content="Fargekart" GroupName="AnalyseType" IsChecked="{Binding IsFargekartSelected, Mode=TwoWay}" Grid.Column="1" Grid.Row="8" Margin="0,0,0,0" />
+                    <RadioButton Content="Mesh-duk" GroupName="AnalyseType" IsChecked="{Binding IsMeshDukSelected, Mode=TwoWay}" Grid.Column="1" Grid.Row="9" />
+                    <Button Grid.Column="1" Grid.Row="10" Content="Kjør Analyse" Command="{Binding VelgAnalyseXYCommand}" Height="50" Margin="0,30,0,0"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="Sett Intervaller" Height="22" Margin="-2,0,-2,2" VerticalAlignment="Bottom">
+            <TabItem Header="Sett Intervaller" Height="22" Margin="-2,0,-2,2" VerticalAlignment="Bottom" Width="335">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
@@ -138,12 +139,12 @@
                         <TextBlock Text="{Binding MaxVerdiXY}" FontSize="15" Grid.Column="2" Grid.Row="0" FontFamily="Artifakt Element Medium"/>
 
                         <TextBlock Text="{Binding TotalProsent, StringFormat='Total Prosent: {0:N0}%'}"
-                   HorizontalAlignment="Left" VerticalAlignment="Top"
-                   FontSize="15"  FontFamily="Artifakt Element Medium" Margin="0,20,0,10"/>
+                    VerticalAlignment="Top"
+                   FontSize="15"  FontFamily="Artifakt Element Medium" Margin="35,150,0,10"/>
+
+
+                        <Button Content="Oppdater Total Prosent" Command="{Binding OppdaterTotalProsetCommand}" Grid.Column="3" Grid.Row="6" Width="130" Height="40" />
                         
-                        
-                        <Button Content="Oppdater Total Prosent" Command="{Binding OppdaterTotalProsetCommand}" Grid.Column="3" Grid.Row="6" Width="130" HorizontalAlignment="Left"/>
-                        <Button Content="Maker noe" Command="{Binding MarkerBergCommand}" Grid.Column="3" Grid.Row="8" Width="130" HorizontalAlignment="Left"/>
 
 
 
@@ -156,9 +157,10 @@
                      Grid.Column="0"
                      Grid.Row="2"
                      Width="250"/>
-                    <Button Content="Lag Fargekart" Command="{Binding KjørFargekartCommand}"
+                    <Button Content="Viualiser Analyse" Command="{Binding KjørFargekartCommand}"
                             Grid.Column="0" Grid.Row="3" Margin="0,25,0,0" Width="120" Height="40"/>
                     <Button Content="Lag Legend" Grid.Column="2" Grid.Row="3" Command="{Binding KjørLegendCommand}" Width="120" Height="40" Margin="0,25,0,0"/>
+                    <Button Content="Maker Usikkerhet" Command="{Binding MarkerBergCommand}" Grid.Column="2" Grid.Row="7" Width="120" Height="40" Margin="0,25,0,0" />
                 </Grid>
             </TabItem>
            
