--- a/Fargemannen/View/AnalyseXY.xaml
+++ b/Fargemannen/View/AnalyseXY.xaml
@@ -160,7 +160,7 @@
                     <Button Content="Viualiser Analyse" Command="{Binding KjørFargekartCommand}"
                             Grid.Column="0" Grid.Row="3" Margin="0,25,0,0" Width="120" Height="40"/>
                     <Button Content="Lag Legend" Grid.Column="2" Grid.Row="3" Command="{Binding KjørLegendCommand}" Width="120" Height="40" Margin="0,25,0,0"/>
-                    <Button Content="Maker Usikkerhet" Command="{Binding MarkerBergCommand}" Grid.Column="2" Grid.Row="7" Width="120" Height="40" Margin="0,25,0,0" />
+                    <Button Content="Marker Usikkerhet" Command="{Binding MarkerBergCommand}" Grid.Column="2" Grid.Row="7" Width="120" Height="40" Margin="0,5,0,0" />
                 </Grid>
             </TabItem>
            
