--- a/Fargemannen/View/DIV.xaml
+++ b/Fargemannen/View/DIV.xaml
@@ -9,12 +9,12 @@
              d:DesignHeight="700" d:DesignWidth="700">
     <Grid DataContext="{Binding Source={x:Static vm:DIVVeiwModel.Instance}}">
         <TabControl>
-            <TabItem Header="Rapport">
+            <TabItem Header="Rapport" Width="335">
                 <Grid Background="White" >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="20"/>
                         <ColumnDefinition Width="136"/>
-                        <ColumnDefinition Width="40"/>
+                        <ColumnDefinition Width="100"/>
                         <ColumnDefinition Width="auto"/>
                         <ColumnDefinition Width="auto"/>
                         <ColumnDefinition Width="auto"/>
@@ -53,7 +53,7 @@
                         <TextBox Text="{Binding ReportName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="120" Margin="0,0,0,10" HorizontalAlignment="Left" />
                         <Button Content="Velg Lagrings Plass" Command="{Binding SaveCommand}" Width="120" Height="20" HorizontalAlignment="Left" />
                         <TextBox Text="{Binding SavePath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="120" Margin="0,0,0,10" HorizontalAlignment="Left" />
-                        <TextBlock Text="Rute størresle:" FontSize="15" FontFamily="Artifakt Element Medium" Margin="0,0,0,5"/>
+                        <TextBlock Text="Diff verdi" FontSize="15" FontFamily="Artifakt Element Medium" Margin="0,0,0,5"/>
                         <TextBox Text="{Binding IntValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="120" Margin="0,0,0,10" HorizontalAlignment="Left" />
                         <TextBlock Text="Navn på Terreng lag:" FontSize="15" FontFamily="Artifakt Element Medium" Margin="0,0,0,5" HorizontalAlignment="Left" />
                         <TextBox Text="{Binding TerrengModellLagNavn, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="120" Margin="0,0,0,10" HorizontalAlignment="Left" />
@@ -63,7 +63,7 @@
                     <Button Content="Lag EXCL rapport" Command="{Binding kjørRapport}" Grid.Column="1" Grid.Row="5" Height="40"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="Mesh Duk" Height="22" Margin="-2,0,-2,2" VerticalAlignment="Bottom">
+            <TabItem Header="Mesh Duk" Width="335">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
