--- a/Fargemannen/View/Symbols.xaml
+++ b/Fargemannen/View/Symbols.xaml
@@ -58,14 +58,14 @@
 
 
                     <StackPanel Grid.Column="3" Grid.Row="4" Orientation="Vertical">
-                        <TextBlock Text="Velg prosjekt:" FontSize="15" FontFamily="Artifakt Element Medium" Margin="0,0,0,6"/>
+                        <TextBlock Text="Prefiks fra:" FontSize="15" FontFamily="Artifakt Element Medium" Margin="0,0,0,6"/>
                         <RadioButton Content="PDF-nummer" GroupName="ProjectType" IsChecked="{Binding UsePDFProject, Mode=TwoWay}"/>
                         <RadioButton Content="Saksnummer" GroupName="ProjectType" IsChecked="{Binding UseCaseProject, Mode=TwoWay}"/>
                         <RadioButton Content="Egendefinert:" GroupName="ProjectType" IsChecked="{Binding UseCustomProject, Mode=TwoWay}"/>
                         
                         <TextBox Text="{Binding CustomProjectName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="120" IsEnabled="{Binding UseCustomProject}" Margin="0,5,0,0" HorizontalAlignment="Left"/>
 
-                        <TextBlock Text="Borrenummer:" FontSize="15" FontFamily="Artifakt Element Medium" Margin="0,15,0,6"/>
+                        <TextBlock Text="Borpunktnummer:" FontSize="15" FontFamily="Artifakt Element Medium" Margin="0,15,0,6"/>
                         <RadioButton Content="SOSI nummer" GroupName="NummerType" IsChecked="{Binding UseSOSINumber, Mode=TwoWay}"/>
                         <RadioButton Content="PDF nummer" GroupName="NummerType" IsChecked="{Binding UsePDFNumber, Mode=TwoWay}"/>
                     </StackPanel>
@@ -74,7 +74,7 @@
                         <TextBlock Text="Minimums årsgrense:" FontSize="15" FontFamily="Artifakt Element Medium" Margin="0,0,0,10"/>
                         <TextBox Text="{Binding MinYear, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="120"  HorizontalAlignment="Left"/>
 
-                        <TextBlock Text="Minimums bor i fjell:" FontSize="15" FontFamily="Artifakt Element Medium" Margin="0,10,0,10"/>
+                        <TextBlock Text="Boredybde i fjell:" FontSize="15" FontFamily="Artifakt Element Medium" Margin="0,10,0,10"/>
                         <TextBox Text="{Binding MinDrillingDepth, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="120" Margin="0,0,0,20" HorizontalAlignment="Left"/>
                     </StackPanel>
 
